oi-bus (0.1.15) UNRELEASED; urgency=medium

  * Add delete_computers and delete_printouts

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Fri, 07 Feb 2020 16:41:57 +0100

oi-bus (0.1.14) unstable; urgency=medium

  * Add import_computers.

 -- Michał Sidor <michcioperz@lain.iscute.ovh>  Fri, 07 Feb 2020 13:25:48 +0100

oi-bus (0.1.13) unstable; urgency=medium

  * Chown /var/lib/oi-bus in postinst just to be sure

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Mon, 03 Feb 2020 19:23:25 +0100

oi-bus (0.1.12) unstable; urgency=medium

  * Prepend 'c' to computer nice name when generating a hostname
  * Fix a few HTTP 500 errors
  * Add oi {upload,download,backupzaw} subcommands
  * Add oi {update,backup} subcommands
  * Add oi {shutdown,wake} subcommands
  * Don't quote env vars in printed commands, so that they can be copied to shell
  * Add --ask/--no-ask and --dry-run options

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Mon, 03 Feb 2020 11:58:36 +0100

oi-bus (0.1.11) unstable; urgency=medium

  * Autogenerate ansible host names from IP addresses
  * Add oi command

 -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Sun, 02 Feb 2020 14:14:53 +0100

oi-bus (0.1.10) unstable; urgency=medium

  * Remove oireg.fri.edu.pl from oi-bus.nginx because it exceeded bucket size

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Fri, 31 Jan 2020 10:25:08 +0100

oi-bus (0.1.9) unstable; urgency=medium

  * Add print_hosts command.
  * Add print_dhcp_hosts command.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Sat, 18 Jan 2020 13:51:44 +0100

oi-bus (0.1.8) unstable; urgency=medium

  * Bodge Content-Disposition in backups. Actually still half-broken but idc.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Sat, 18 Jan 2020 13:15:22 +0100

oi-bus (0.1.7) unstable; urgency=medium

  * Bodge printing.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Sat, 18 Jan 2020 12:49:47 +0100

oi-bus (0.1.6) unstable; urgency=medium

  * Sakuga.
  * Add our netboot to nginx config.